# task-for-sustaihub

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  tasks.py
database/: operations.py  session.py
domain/: value_object.py
infra/: http_service.py
modules/general/: enums.py  value_objects.py
modules/services/: __init__.py  exceptions.py  twse.py
modules/stock/: value_objects.py
pipelines/: base.py  stock.py
