[tool.poetry]
name = "task-for-sustaihub"
version = "0.1.0"
description = ""
authors = ["Yu Chen, Yang <ycy.tai@gmail.com>"]
readme = "README.md"
packages = [{include = "task_for_sustaihub"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
pydantic = "^2.9.2"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
